7140882: Don't return booleans from methods returning pointers

Changed "return false" to "return NULL"

Reviewed-by: dholmes, rottenha